--- a/app/src/main/res/layout/clickscreen.xml
+++ b/app/src/main/res/layout/clickscreen.xml
@@ -26,8 +26,36 @@
         android:textColor="@android:color/black"
 
         />
+    <Button
+        android:id="@+id/emailButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/clearButton"
+        android:background="@color/Argent"
+        android:text="Email user"
+        android:textSize="30dp"
+        android:padding="10dp"
+        android:textColor="@android:color/white"
+        android:layout_marginRight="5dp"
+        />
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/clearButton"
+        android:layout_toRightOf="@id/emailButton"
+        android:background="@color/Argent"
+        android:text="Text user"
+        android:textSize="30dp"
+        android:padding="10dp"
+        android:textColor="@android:color/white"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginLeft="5dp"
+
+        />
 
     <Button
+        android:id="@+id/clearButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
@@ -38,6 +66,7 @@
         android:text="Clear machine"
         android:textSize="30dp"
         android:textColor="@android:color/white"
-        android:background="@color/Argent"/>
+        android:background="@color/Argent"
+        android:layout_marginTop="10dp"/>
 
 </RelativeLayout>
