Got it to connect to EC2 instance now just adding in to finalize buttons

--- a/app/src/main/res/layout/emptymachine.xml
+++ b/app/src/main/res/layout/emptymachine.xml
@@ -50,6 +50,7 @@
         android:textColor="@android:color/white"
         android:background="@color/Argent"
         android:layout_marginTop="50dp"
+        android:onClick="submitNewUser"
         />
 
 </RelativeLayout>
